# hume

./: .gitignore  README.md  configin.json  configout.json  pyproject.toml
config/: behavior.json  behavior_comet.json
docs/: comet_training_flow.md
experiments/libero/scripts/: eval_libero.sh
scripts/: debug_dataset.py  env.behavior.sh  env.sh  eval.behavior.comet.sh  eval.behavior.sh  filter.behavior.meta.py  fix_indice.behavior.py  state.check.py  train_s2.behavior.comet.sh  train_s2.behavior.sh  train_s2.sh  train_vqh_s1.behavior.comet.sh  train_vqh_s1.behavior.sh  train_vqh_s1.sh  try_hume.py
src/hume/: serve_b1k.py  serve_b1k_comet.py
src/hume/models/: __init__.py  configuration_hume.py  modeling_hume.py  value_query.py
src/hume/models/comet_models/: __init__.py  gemma_config.py  gemma_pytorch.py  pi0_pytorch.py
src/hume/shared/: eval_b1k_wrapper.py
src/hume/training/: dataset.py  lerobot_patch.py  train_s2.py  train_vqh_s1.py  transforms.py
